# kiro-gateway-deploy

./: .dockerignore  .env.example  .gitignore  .stignore  ChangeLog.md  LICENSE  README.md  docker-compose.yml
Casks/: kiro-gateway-tray.rb
app/: .gitignore  README.md  pyproject.toml  requirements-build.txt  requirements.txt
app/kiro_gateway_tray/: __init__.py  __main__.py  appconfig.py  async_cache.py  autostart.py  cli.py  cloudflared.py  dialogs.py  gateway.py  httpclient.py  icon.py  incident_report.py  log.py  macos_menu.py  notify.py  paths.py  platform_compat.py  proc_guard.py  provision.py  request_activity.py  sentry_setup.py  speedtest.py  supervisor.py  telemetry.py  theme_watcher.py  tray.py  tray_live.py  updates.py  usage.py
app/kiro_tray/: __init__.py  __main__.py  appconfig.py  cli.py  cloudflared.py  gateway.py  paths.py  provision.py  supervisor.py  tray.py  usage.py
app/packaging/: kiro_gateway_tray.iss  kiro_gateway_tray.spec  kiro_tray.spec  macos_icon.py  make_dist.py
app/packaging/homebrew/: kiro-gateway-tray.rb  kiro-tray.rb
app/patches/: add_usage_endpoint.py  apply_aliases.py
app/resources/: Assets.car  icon.icns
app/resources/AppIcon.icon/: icon.json
app/scripts/: bump_cask.py  compress_cloudflared.py  extract_changelog.py  fetch_cloudflared.py  inject_metadata.py  speedtest_probe.py  vendor_sync.py
app/tests/: conftest.py  test_appconfig.py  test_async_cache.py  test_autostart.py  test_bump_cask.py  test_cloudflared.py  test_dialogs.py  test_gateway.py  test_httpclient_proxy.py  test_incident_report.py  test_inject_metadata.py  test_log.py  test_macos_menu_tab_align.py  test_main_single_instance.py  test_paths.py  test_platform_compat.py  test_proc_guard.py  test_provision_proxy.py  test_request_activity.py  test_sentry_setup.py  test_speedtest.py  test_supervisor.py  test_telemetry.py  test_theme_watcher.py  test_tray_activity_menu.py  test_tray_live.py  test_tray_main_thread_ui.py  test_tray_throttle.py  test_tray_update.py  test_tray_usage_refresh.py  test_updates.py  test_usage.py  test_windows_installer.py
docker/: .env.example  README.md  (+1 more)
(+21 files in other folders)
